// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render List with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ListItem
      amount={1203}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ListItem
      amount={10000000}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ListItem
      amount={32}
      createdAt={345600000}
      description="credit"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
